--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <h4>SITI UNESCO IN SILICIA</h4>
 
                 <div>
-                    <a href="">VALLE DEI TEMPLI</a>
+                    <a href="html/valley-of-the-temple.html">VALLE DEI TEMPLI</a>
                     <a href="">VILLA DEL CASALE</a>
                     <a href="">VAL DI NOTO</a>
                     <a href="">PANTALICA E SIIRACUSA</a>
