--- a/html/valley-of-the-temple.html
+++ b/html/valley-of-the-temple.html
@@ -108,8 +108,8 @@
                 <h4>SITI UNESCO IN SILICIA</h4>
 
                 <div>
-                    <a href="html/valley-of-the-temple.html">VALLE DEI TEMPLI</a>
-                    <a href="">VILLA DEL CASALE</a>
+                    <a href="valley-of-the-temple.html">VALLE DEI TEMPLI</a>
+                    <a href="villa-of-the-farmhouse.html">VILLA DEL CASALE</a>
                     <a href="">VAL DI NOTO</a>
                     <a href="">PANTALICA E SIIRACUSA</a>
                     <a href="">VULCANO ETNA</a>
