--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 
                 <div>
                     <a href="html/valley-of-the-temple.html">VALLE DEI TEMPLI</a>
-                    <a href="">VILLA DEL CASALE</a>
-                    <a href="">VAL DI NOTO</a>
+                    <a href="html/villa-of-the-farmhouse.html">VILLA DEL CASALE</a>
+                    <a href="html/noto-valley.html">VAL DI NOTO</a>
                     <a href="">PANTALICA E SIIRACUSA</a>
                     <a href="">VULCANO ETNA</a>
                     <a href="">PALERMO ARABO NORMANNA</a>
