done for the night

--- a/html/sy-archeology.html
+++ b/html/sy-archeology.html
@@ -25,8 +25,8 @@
         </div>
 
         <div class="heading">
-            <p class="date"><span>19</span> <br> MAG 2020</p>
-            <h1 class="margin-topper">VAL DI NOTO</h1>
+            <p class="date"><span>1</span> <br> NOV 2020</p>
+            <h1 class="margin-topper">PARCO ARCHEOLOGICO SIRACUSA</h1>
         </div>
     </header>
 
@@ -39,40 +39,35 @@
 
         <div>
             <p>
-                La val di Noto è uno dei siti del patrimonio UNESCO più visitati in Sicilia, Noto fu ricostruita interamente in stile barocco dopo il terremoto del 1963
-            </p>
-        </div>
-
-        <div class="text-images p-space">
-            <h2>VAL DI NOTO</h2>
-            <p class="underline">capitale del barocco</p>
-            <p>
-                L’11 gennaio 1693 è la data che segna una ferita profonda nella val di Noto Sicilia, venne distrutta da un devastante terremoto insieme alle città di Catania,  Siracusa e Ragusa ed i paesi di Modica, Militello, Scicli, Acireale,  furono letteralmente rase al suolo. Si occupò della ricostruzione Giuseppe Lanza duca di Camastra (rappresentante del il Vicere spagnolo)  che ricostruì la città di Noto in un altro sito 8 km più a valle, sul declivio del monte Meti, intervenne l’ingegnere militare olandese Carlos de Grunenbergh e numerosi architetti Rosario Gagliardi, Paolo Labisi, Vincenzo Sinatra, Antonio Mazza, capimastri e scalpellini, che, durante tutto il XVIII secolo, realizzano questo eccezionale ambiente urbanistico con la tipica impronta barocca.
+                <span>IL PARCO ARCHEOLOGICO SIRACUSA</span> è una vasta area che comprende anche la Necropoli di Pantalica.
             </p>
         </div>
 
         <section class="text-images">
-            <img src="../images/img-4.jpg" alt="Image" class="images">
+            <img src="../images/img-27.jpg" alt="Image" class="images">
             <div class="text">
                 <p>
-                    Il barocco sta ad indicare tout court un movimento e una stagione culturale nata a Roma, con gusto artistico che mette l’accento su estrosità e fantasia quasi bizzarra, un linguaggio classico che ha come punto di riferimento gli artisti Bernini, Borromini.
+                    Siracusa venne fondata intorno all’anno 734-733 a.C. ad opera dei Corinzi. Fu una delle più importanti metropoli dell’età classica, primeggiò per potenza e ricchezza con Atene. Fu patria di artisti, filosofi e uomini scienza il più famoso fu Archimede.
 
-                    Troviamo la massima espressione del barocco  nella Cattedrale di Noto di San Nicolò, riaperta al pubblico da recente dopo che il terremoto del 1996 l’aveva gravemente danneggiata.
+                    Dopo il violento terremoto del 1693, il centro storico fu ricostrparco archeologico siracusauito interamente nello stile Barocco e tutt’oggi contraddistingue l’architettura cittadina.
             </p>
             </div>
         </section>
 
         <section class="text-images">
-            <img src="../images/img-25.jpg" alt="Image" class="images">
+            <img src="../images/img-28.jpg" alt="Image" class="images">
             <div class="text">
                 <p>
-                    E’ possibile visitare uno dei più eleganti palazzi della Sicilia tutto in stile barocco, dei nobili Nicolai di Villadorata, colpiscono le imponenti balconate  arricchite da mensoloni raffiguranti leoni, bambini, centauri, cavalli e sirene. Rimarrete stupiti dalle eleganti sale dei palazzi della nobiltà dei primi del 700. Altri importanti palazzi di nobili siciliani sono: Palazzo Modica di San Giovanni, Palazzo Landolina di Sant’Alfano, Palazzo Trigona di Cannicarao, Palazzo del Vescovado, Palazzo Impellizzeri di San Giacomo.
+                    Dopo il violento terremoto del 1693, il centro storico fu ricostrparco archeologico siracusauito interamente nello stile Barocco e tutt’oggi contraddistingue l’architettura cittadina.
+
+                    Il parco archeologico di Siracusa consiste  in un  patrimonio architettonico distribuito                    in una vasta area, dove sono stati ritrovati importanti resti archeologici, ne sono                 testimonianza le antiche ceramiche del 6000 a.c. della necropoli di Sentinello. Si                  possono scorgere, lungo il perimetro della città di Siracusa,  monumentali testimonianze            archeologiche di origine greco romana le “alte latomie”. Il teatro Greco di Siracusa,               l’Orecchio di Dionisio, la Grotta del Ninfeo appartengono al parco archeologico della              Neapolis,  insieme ad altri monumenti significativi e storicamente evocativi della città
             </p>
             </div>
         </section>
 
+        <h2 class="centered">All’interno del Parco archeologico Siracusa</h2>
+
         <section class="text-images">
-            <img src="../images/img-26.png" alt="Image" class="images">
             <div class="text">
                 <p>
                     <a>Noto Antica:</a> è l’area della val di Noto Sicilia, dove si trovano le rovine della cittadina rasa al suolo dal terribile terremoto del 1693,  si trova a circa 9 km a nord dal nuovo centro abitato, sul monte Alveria. val di notoAttualmente a causa di una carente cartellonistica è difficile da raggiungere e scarsamente valorizzato per mancanza di infrastrutture.
@@ -81,21 +76,37 @@
         </section>
 
         <section class="text-images">
+            <img src="../images/img-29.jpg" alt="" class="images">
             <p>
-                The January 11, 1693 is the date that marks a deep wound in the Val di Noto Sicily, was destroyed by a devastating earthquake along with the city of Catania, Siracusa and Ragusa and the towns of Modica, Militello, Scicli, Acireale, they were literally burned to the soil. Take charge of the reconstruction Giuseppe Lanza Duke of Camastra (representative of the Spanish viceroy) and who rebuilt the city of Noto in another site 8 km downstream, the upstream slope of the Meti, intervened Dutch military engineer Carlos de Grunenbergh and numerous architect Rosario Gagliardi , Paul Labisi, Vincenzo Sinatra, Antonio Mazza, master builders and masons, who, during the eighteenth century, realize this unique urban environment with the typical Baroque style. The Baroque Noto Sicilie indicates outright a movement and a cultural season born in Rome, with artistic taste which puts the emphasis on flair and imagination almost bizarre, a classic language that has as its reference point the artists Bernini, Borromini. We find the best expression of the baroque in Noto Cathedral of St. Nicholas, recently reopened to the public after the earthquake of 1996 had severely damaged.
-                <br>
-                Noto Italy, Noto Sicily
+                La  Necropoli Rupestre di Pantalica
+
+                è una località naturalistico-archeologica,  il nome del sito sembra derivare dall’arabo Buntarigah, che significa grotte, per l’ovvia presenza di molteplici grotte naturali o artificiali, quest’ultime scavate dagli antichi abitanti per la sepoltura. Costituisce uno dei più importanti luoghi protostorici siciliani dell’età del bronzo e del ferro dell’isola. Nella prima metà del XIII secolo a.C. tutti gli insediamenti costieri scomparvero quasi all’improvviso per l’arrivo in Sicilia dei Siculi e di altre popolazioni italiche; gli abitanti del luogo, rispondendo ad esigenze di difesa, furono
             </p>
         </section>
+
+        <section class="text-images">
+            <img src="../images/img-30.jpg" alt="" class="images">
+            <p>
+                costretti a lasciarepantalica-necropoli la fascia costiera e trovarono rifugio sulle impervie pareti del canyon naturale.
+
+                Su un lembo di terra concesso dal re Hyblon venne edificata dai megaresi la città di Megara Iblea intorno al 728 a.c.. Nel  664 a.c le incursioni di Siracusa, ormai in espansione,  distrussero il giovane regno di Pantalica con la fondazione di Akrai. Il sito rimase disabitato fino al medioevo (VI secolo d.c.) quando le incursione di barbari, pirati e in ultimo gli arabi, costrinsero le popolazioni locali a trovarvi rifugio, così come fecero i primi abitanti di Pantalica nel XIII sec. a.c..  Si hanno testimonianze di epoca bizantina come resti di piccoli oratori rupestri scavati nella roccia: grotta del Crocifisso, di San Nicolicchio e San Micidiario.
+            </p>
+        </section>
+
+        <div class="gallery">
+            <img src="../images/img-31.jpg" alt="">
+            <img src="../images/img-32.jpg" alt="">
+            <img src="../images/img-33.jpg" alt="">
+        </div>
 
 
         <aside class="summary">
             <h3>Summary</h3>
-            <img src="../images/img-4.jpg" alt="">
+            <img src="../images/img-30.jpg" alt="">
     
             <div>
-                <p><span>Nome Articolo:</span> Val di Noto</p>
-                <p><span>Descrizione:</span> è uno dei siti del patrimonio UNESCO più visitati in Sicilia, Noto fu ricostruita interamente in stile barocco dopo il terremoto del 1963</p>
+                <p><span>Nome Articolo:</span> PARCO ARCHEOLOGICO SIRACUSA</p>
+                <p><span>Descrizione:</span> IL PARCO ARCHEOLOGICO SIRACUSA è una vasta area che comprende anche la Necropoli di Pantalica.</p>
                 <p><span>Autori:</span> Mariano Grasso</p>
                 <p><span>Pubblicato Da:</span> Tour Sicily Unesco Sites</p>
                 <p><span>Logo:</span> Vacanze in Sicilia</p>
@@ -120,7 +131,7 @@
                         <a href="villa-of-the-farmhouse.html">VILLA DEL CASALE</a>
                         <a href="noto-valley.html">VAL DI NOTO</a>
                         <a href="sy-archeology.html">PANTALICA E SIIRACUSA</a>
-                        <a href="">VULCANO ETNA</a>
+                        <a href="etna-volcano.html">VULCANO ETNA</a>
                         <a href="">PALERMO ARABO NORMANNA</a>
                         <a href="">ISOLE EOLIE</a>
                     </div>
