--- a/html/villa-of-the-farmhouse.html
+++ b/html/villa-of-the-farmhouse.html
@@ -124,7 +124,7 @@
                         <a href="valley-of-the-temple.html">VALLE DEI TEMPLI</a>
                         <a href="villa-of-the-farmhouse.html">VILLA DEL CASALE</a>
                         <a href="noto-valley.html">VAL DI NOTO</a>
-                        <a href="">PANTALICA E SIIRACUSA</a>
+                        <a href="sy-archeology.html">PANTALICA E SIIRACUSA</a>
                         <a href="">VULCANO ETNA</a>
                         <a href="">PALERMO ARABO NORMANNA</a>
                         <a href="">ISOLE EOLIE</a>
