--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
                     <a href="html/valley-of-the-temple.html">VALLE DEI TEMPLI</a>
                     <a href="html/villa-of-the-farmhouse.html">VILLA DEL CASALE</a>
                     <a href="html/noto-valley.html">VAL DI NOTO</a>
-                    <a href="">PANTALICA E SIIRACUSA</a>
-                    <a href="">VULCANO ETNA</a>
-                    <a href="">PALERMO ARABO NORMANNA</a>
-                    <a href="">ISOLE EOLIE</a>
+                    <a href="html/sy-archeology.html">PANTALICA E SIIRACUSA</a>
+                    <a href="html/etna-volcano.html">VULCANO ETNA</a>
+                    <a href="html/palermo.html">PALERMO ARABO NORMANNA</a>
+                    <a href="html/islands.html">ISOLE EOLIE</a>
                 </div>
             </div>
 
@@ -170,8 +170,8 @@
                 <h4>PATRIMONIO UNESCO IMMATERIALE</h4>
                 
                 <div>
-                    <a href="">OPERA DEI PUPI PALERMO</a>
-                    <a href="">DIETA MEDITERRANEA</a>
+                    <a href="html/opera.html">OPERA DEI PUPI PALERMO</a>
+                    <a href="html/delta.html">DIETA MEDITERRANEA</a>
                 </div>
             </div>
 
