--- a/html/valley-of-the-temple.html
+++ b/html/valley-of-the-temple.html
@@ -110,8 +110,8 @@
                 <div>
                     <a href="valley-of-the-temple.html">VALLE DEI TEMPLI</a>
                     <a href="villa-of-the-farmhouse.html">VILLA DEL CASALE</a>
-                    <a href="">VAL DI NOTO</a>
-                    <a href="">PANTALICA E SIIRACUSA</a>
+                    <a href="noto-valley.html">VAL DI NOTO</a>
+                    <a href="sy-archeology.html">PANTALICA E SIIRACUSA</a>
                     <a href="">VULCANO ETNA</a>
                     <a href="">PALERMO ARABO NORMANNA</a>
                     <a href="">ISOLE EOLIE</a>
