--- a/html/enna.html
+++ b/html/enna.html
@@ -25,32 +25,19 @@
         </div>
 
         <div class="heading">
-            <p class="date"><span>20</span> <br> NOV 2020</p>
-            <h1 class="margin-topper">DIETA MEDITERRANEA</h1>
+            <p class="date"><span>22</span> <br> APR 2019</p>
+            <h1 class="margin-topper">Castello Federico II Enna
+            </h1>
         </div>
     </header>
 
     <section>
         <div class="desc">
             <p>di Mario || </p>
-            <p> postato in: PATRIMONIO UNESCO IMMATERIALE || </p>
+            <p> postato in: SICILIA 360 GRADI || </p>
             <p>0</p>
         </div>
 
-        <div>
-            <h2 class="centered">
-                DIETA MEDITERRANEA “PATRIMONIO IMMATERIALE DELL’UMANITA'”
-            </h2>
-        </div>
-
-        <div class="text-images p-space">
-            <p>
-                La Sicilia si trova nel cuore del Mediterraneo , crocevia di civiltà e culture di mondi vicini e lontani, inevitabile fusione di tradizioni culinarie di diversi popoli che hanno sfruttato le risorse tipiche locali come cereali, frutta, verdura, prodotti del latte, pesce, pollame, vino abbondanti sul territorio Italiano e siciliano in particolare.
-
-                Potete trovare numerose ricette tipicamente siciliane su www.cheftime.it  ricette…sfiziose
-            </p>
-        </div>
-    
         <div class="three-images">
             <img src="../images/usato.png" alt="">
             <img src="../images/cucina-img.png" alt="">
