--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <h4>TOUR OF SICILY</h4>
                 
                 <div>
-                    <a href="">LE SPIAGGE DELLA SICILIA</a>
+                    <a href="html/spiagge.html">LE SPIAGGE DELLA SICILIA</a>
                 </div>
             </div>
 
@@ -187,14 +187,14 @@
                 <h4>VISIONE 360 GRADI</h4>
                 
                 <div>
-                    <a href="">CASTELLO LOMBARDO ENNA</a>
-                    <a href="">CASTELLO FEDERICO II ENNA</a>
-                    <a href="">ETNA 360 GRADI</a>
-                    <a href="">ENNA CHIESA MARIA SS</a>
-                    <a href="">TEATRO GRECO SEGESTA</a>
-                    <a href="">TEMPIO DI SELINUNTE</a>
-                    <a href="">MULINI DI MARSALA</a>
-                    <a href="">CAVE DI CUSA CASTELVETRANO</a>
+                    <a href="html/castello.html">CASTELLO LOMBARDO ENNA</a>
+                    <a href="html/enna.html">CASTELLO FEDERICO II ENNA</a>
+                    <a href="html/etna-360.html">ETNA 360 GRADI</a>
+                    <a href="html/chiesa.html">ENNA CHIESA MARIA SS</a>
+                    <a href="html/teatro.html">TEATRO GRECO SEGESTA</a>
+                    <a href="html/tempio.html">TEMPIO DI SELINUNTE</a>
+                    <a href="html/mulini.html">MULINI DI MARSALA</a>
+                    <a href="html/cave.html">CAVE DI CUSA CASTELVETRANO</a>
                 </div>
             </div>
         </div>
