--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav> 
-            <i class="fa fa-bars"></i>
+            <i class="fa fa-bars go-down"></i>
         </nav>
 
         <div class="banner">
@@ -29,7 +29,9 @@
         </div>
     </header>
 
-    <section>
+    <div class="space-in">
+
+    <section class="centered">
         <p>
             Patrimonio  Unesco Sicilia il più ricco d’Italia,  dalla maestosa vetta del monte Etna, alle ventose isole Eolie del mar Tirreno, dalle rupestri caverne di Pantalica,  ai sontuosi Templi di Agrigento, dalla lussuosa Villa del Casale di Piazza Armerina, alle città barocche della Sicilia orientale, e non ultimo la città di  Palermo, centro d’interscambio tra l’antica cultura Araba e quella  Normanna,  siti Unesco che aspettano voi per essere visitati.
         </p>
@@ -129,6 +131,7 @@
         </div>
     </section>
 
+    <div class="centered">
     <aside class="summary">
         <h3>Summary</h3>
         <img src="images/unesco-silicia.jpg" alt="">
@@ -141,6 +144,7 @@
             <p><span>Logo:</span> Vacanze in Sicilia</p>
         </div>
     </aside>
+</div>
 
     <div class="three-images">
         <img src="images/usato.png" alt="">
@@ -199,5 +203,8 @@
             </div>
         </div>
     </footer>
+
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
