done with the final update

--- a/html/islands.html
+++ b/html/islands.html
@@ -169,7 +169,7 @@
                     <p>ISOLA DI LIPARI</p>
                     <img src="../images/isola.png" alt="">
                 </div>
-                <div id="left-align">
+                <div class="margin-left" id="left-align">
                     <p class="left">
                         spiagge di Acque Calde, Canneto, spiaggia Bianca
                     La spiaggia bianca è considerata la più bella dell’isola di Lipari, si scaglia contro la colata di ossidiana delle Rocche Rosse,  si trova vicino alle  altre spiagge di Canneto ed Acqua Calda, quest’ultima riscaldata da sorgenti di origine vulcanica, altre calette sono raggiungibili esclusivamente via mare, da non perde una emozionante giro dell’isola in barca.
