--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Clubnesco">
+    <title>Clubnesco</title>
+
     <link rel="stylesheet" href="styles.css">   
      <title>Ramocorre</title>
 
@@ -43,7 +46,7 @@
         <img src="images/img-1.jpg" alt="Image" class="images">
         <div class="text">
             <p>
-            La Sicilia è la regione d’Italia  più ricca di beni artistici e culturali riconosciuti dalla Organizzazione Mondiale, IL PATRIMONIO UNESCO SICILIA,  conta sette siti su un totale di 51 presenti di tutta Italia.  L’elenco è il seguente: Agrigento conserva il famoso complesso monumentale della <a href="">Valle dei Templi,</a> quello della Concordia è stato definito da Goethe “il più affascinante edificio sacro dell’umanità”. Alla valle dei Templi si aggiunge il quartiere ellenistico romano, 10 mila metri quadrati di una città eletta come la più bella del mondo da Pindaro. <span>Patrimonio UNESCO 1997:</span> rappresenta la massima espressione artistica nella realizzazione di templi dorici del periodo Ellenico, è la più grande città del mondo antico del mediterraneo  e conserva ancora perfettamente importanti monumenti dell’arte e della cultura greca. 
+            La Sicilia è la regione d’Italia  più ricca di beni artistici e culturali riconosciuti dalla Organizzazione Mondiale, IL PATRIMONIO UNESCO SICILIA,  conta sette siti su un totale di 51 presenti di tutta Italia.  L’elenco è il seguente: Agrigento conserva il famoso complesso monumentale della <a href="html/valley-of-the-temple.html">Valle dei Templi,</a> quello della Concordia è stato definito da Goethe “il più affascinante edificio sacro dell’umanità”. Alla valle dei Templi si aggiunge il quartiere ellenistico romano, 10 mila metri quadrati di una città eletta come la più bella del mondo da Pindaro. <span>Patrimonio UNESCO 1997:</span> rappresenta la massima espressione artistica nella realizzazione di templi dorici del periodo Ellenico, è la più grande città del mondo antico del mediterraneo  e conserva ancora perfettamente importanti monumenti dell’arte e della cultura greca. 
         </p>
         </div>
     </section>
@@ -52,7 +55,7 @@
         <img src="images/img-2.png" alt="Image" class="images">
         <div class="text">
             <p>
-                Gli stupendi mosaici policromi della <a href="">Villa del Casale</a> del III-IV sec. d.C., rappresentano i più importanti  resti archeologici del Mediterraneo, la magnificenza del paesaggio, la raffinatezza dell’edificio, sono  testimonianza di una vita fatta di sfarzi, eleganza e leggerezza, tipici della cultura romana dell’epoca. <span>Patrimonio UNESCO 1997:</span> rappresenta l’espressione più alta del lusso in cui  vivevano i patrizi  romani. Racconta attraverso i mosaici, di eccezionali qualità artistica ed originalità, la struttura sociale  e economica della suo tempo.
+                Gli stupendi mosaici policromi della <a href="html/villa-of-the-farmhouse.html">Villa del Casale</a> del III-IV sec. d.C., rappresentano i più importanti  resti archeologici del Mediterraneo, la magnificenza del paesaggio, la raffinatezza dell’edificio, sono  testimonianza di una vita fatta di sfarzi, eleganza e leggerezza, tipici della cultura romana dell’epoca. <span>Patrimonio UNESCO 1997:</span> rappresenta l’espressione più alta del lusso in cui  vivevano i patrizi  romani. Racconta attraverso i mosaici, di eccezionali qualità artistica ed originalità, la struttura sociale  e economica della suo tempo.
         </p>
         </div>
     </section>
@@ -61,7 +64,7 @@
         <img src="images/img-3.jpg" alt="Image" class="images">
         <div class="text">
             <p>
-                Omero così come Virgilio, dedicarono la loro attenzione alle Eolie e al suo potente dio Eolo che Ulisse  incontrò nei suoi dieci anni di viaggio. L’ossidiana e la pomice fecero delle isole Eolie il fulcro del  commercio nel mar Mediterraneo. Le rocce fumanti, descritte dagli antichi poeti, tutt’oggi fanno da  richiamo a turisti desiderosi di visitare scenari poco terrestri. <a href="">Le spiagge</a> e le centinaia di calette, raggiungibili solo via mare, sono la meta preferita da chi ama la natura selvaggia ed itinerari alternativi. <span>Patrimonio UNESCO 2000:</span> sono un riferimento fondamentale della formazione dei geologi di tutto il mondo da 200 anni, le isole di Vulcano e Stromboli hanno fornito il nome “eruzioni vulcaniche e stromboliane” ai due fenomeni naturali oggetto di studio degli scienziati.
+                Omero così come Virgilio, dedicarono la loro attenzione alle Eolie e al suo potente dio Eolo che Ulisse  incontrò nei suoi dieci anni di viaggio. L’ossidiana e la pomice fecero delle isole Eolie il fulcro del  commercio nel mar Mediterraneo. Le rocce fumanti, descritte dagli antichi poeti, tutt’oggi fanno da  richiamo a turisti desiderosi di visitare scenari poco terrestri. <a href="html/spiagge.html">Le spiagge</a> e le centinaia di calette, raggiungibili solo via mare, sono la meta preferita da chi ama la natura selvaggia ed itinerari alternativi. <span>Patrimonio UNESCO 2000:</span> sono un riferimento fondamentale della formazione dei geologi di tutto il mondo da 200 anni, le isole di Vulcano e Stromboli hanno fornito il nome “eruzioni vulcaniche e stromboliane” ai due fenomeni naturali oggetto di studio degli scienziati.
         </p>
         </div>
     </section>
@@ -70,7 +73,7 @@
         <img src="images/img-4.jpg" alt="Image" class="images">
         <div class="text">
         <p>    
-        Dopo il devastante terremoto del 1693, la Sicilia Orientale fu ricostruita totalmente da artisti che adottarono lo stile dell’epoca il “Barocco”, cosi le città divennero veri e propri campionari di magnificenze, chiese, palazzi, lunghe scalinate e fontane,  marcarono come sparti-acque due periodi della  storia siciliana. <a href="">La Cattedrale di Noto </a> è uno dei magnifici edifici realizzati in quell’epoca. <span>Patrimonio UNESCO 2002:</span> le città barocche sono testimonianza della genialità ed esuberanza  artistica dell’epoca, rappresentano la fioritura e l’esplosione del Barocco in Europa. Sono testimonianza  della fragilità del territorio sempre minacciato dai terremoti come quello che distrusse la Sicilia orientale  nel 1963.
+        Dopo il devastante terremoto del 1693, la Sicilia Orientale fu ricostruita totalmente da artisti che adottarono lo stile dell’epoca il “Barocco”, cosi le città divennero veri e propri campionari di magnificenze, chiese, palazzi, lunghe scalinate e fontane,  marcarono come sparti-acque due periodi della  storia siciliana. <a href="html/noto-valley.html">La Cattedrale di Noto </a> è uno dei magnifici edifici realizzati in quell’epoca. <span>Patrimonio UNESCO 2002:</span> le città barocche sono testimonianza della genialità ed esuberanza  artistica dell’epoca, rappresentano la fioritura e l’esplosione del Barocco in Europa. Sono testimonianza  della fragilità del territorio sempre minacciato dai terremoti come quello che distrusse la Sicilia orientale  nel 1963.
         </p>
         </div>
     </section>
@@ -79,7 +82,7 @@
         <img src="images/img-5.jpg" alt="Image" class="images">
         <div class="text">
         <p>    
-           <a href="">Parco archelogico Siracusa</a> e Necropoli di Pantalica.  In questa vallata dal paesaggio brullo e misterioso  i Siculi seppellirono i loro morti, sono 5000 i fori nella roccia che mutano il paesaggio del canyon scavato dai fiumi Anapo e Calcinara. Nella montagna alta 450 metri trovarono rifugio le popolazioni indigene scappate dalla costa dall’invasione dei Siculi ed Italici (XIII sec. a.c.), stessa cosa avvenne nel medioevo (IX sec. d.c.) per le incursioni di  barbari, pirati ed arabi.Patrimonio UNESCO 2005: l’insieme dei monumenti e dei siti di Siracusa e Pantalica sono un importante testimonianze delle culture del Mediterraneo nel corso di tre millenni. Rappresentano le diverse influenze di stili dell’arte Greca, Romana e Barocca.
+           <a href="html/sy-archeology.html">Parco archelogico Siracusa</a> e Necropoli di Pantalica.  In questa vallata dal paesaggio brullo e misterioso  i Siculi seppellirono i loro morti, sono 5000 i fori nella roccia che mutano il paesaggio del canyon scavato dai fiumi Anapo e Calcinara. Nella montagna alta 450 metri trovarono rifugio le popolazioni indigene scappate dalla costa dall’invasione dei Siculi ed Italici (XIII sec. a.c.), stessa cosa avvenne nel medioevo (IX sec. d.c.) per le incursioni di  barbari, pirati ed arabi.Patrimonio UNESCO 2005: l’insieme dei monumenti e dei siti di Siracusa e Pantalica sono un importante testimonianze delle culture del Mediterraneo nel corso di tre millenni. Rappresentano le diverse influenze di stili dell’arte Greca, Romana e Barocca.
         </p>
         </div>
     </section>
@@ -88,7 +91,7 @@
         <img src="images/img-6.jpg" alt="Image" class="images">
         <div class="text">
         <p>
-            Altezza variabile oltre i 3300 metri, 44 km di diametro, <a href="">l’Etna</a> è il vulcano più alto d’Europa ed uno dei più grandi del mondo, ha avuto origini durante l’era del quaternario (600 mila anni fa). Una tremenda  esplosione avvenuta 64 mila  anni fa, svuotò la camera magmatica che alla fine collassò, formando  quella che oggi si chiama “Valle del Bove” naturale contenitore delle innumerevoli colate che hanno da  sempre minacciano i paesi sottostanti.
+            Altezza variabile oltre i 3300 metri, 44 km di diametro, <a href="html/etna-volcano.html">l’Etna</a> è il vulcano più alto d’Europa ed uno dei più grandi del mondo, ha avuto origini durante l’era del quaternario (600 mila anni fa). Una tremenda  esplosione avvenuta 64 mila  anni fa, svuotò la camera magmatica che alla fine collassò, formando  quella che oggi si chiama “Valle del Bove” naturale contenitore delle innumerevoli colate che hanno da  sempre minacciano i paesi sottostanti.
         </p>
         </div>
     </section>
@@ -106,7 +109,7 @@
         <img src="images/img-8.jpg" alt="Image" class="images">
         <div class="text">
         <p>
-           <a href="">Palermo araba normana,</a> conserva bene lo stile delle varie dominazioni in quanto  non ha subito  calamità naturali, come  terremoti, che hanno invece colpito la Sicilia occidentale. Il duomo di Monreale  la Cappella Paladina, la Cattedrale di Palermo ed il palazzo dei Normanni, sono tra i monumenti meglio  conservati delle dominazioni arabe e normanne. <span>Patrimonio UNESCO 2015:</span> Palermo è stato il centro di interscambio di diverse culture (musulmana, bizantino, latino, ebraico, lombardi e francesi), che hanno influenzato l’architettura della città e dell’intero versante tirrenico e delle regioni del Mediterraneo medievale, Inoltre la sovrapposizione di individui di diversa origine ha influenzato  la cultura e la politica di tutti i tempi.
+           <a href="html/palermo.html">Palermo araba normana,</a> conserva bene lo stile delle varie dominazioni in quanto  non ha subito  calamità naturali, come  terremoti, che hanno invece colpito la Sicilia occidentale. Il duomo di Monreale  la Cappella Paladina, la Cattedrale di Palermo ed il palazzo dei Normanni, sono tra i monumenti meglio  conservati delle dominazioni arabe e normanne. <span>Patrimonio UNESCO 2015:</span> Palermo è stato il centro di interscambio di diverse culture (musulmana, bizantino, latino, ebraico, lombardi e francesi), che hanno influenzato l’architettura della città e dell’intero versante tirrenico e delle regioni del Mediterraneo medievale, Inoltre la sovrapposizione di individui di diversa origine ha influenzato  la cultura e la politica di tutti i tempi.
 
 
         </p>
@@ -117,7 +120,7 @@
         <img src="images/img-9.png" alt="Image" class="images">
         <div class="text">
         <p>
-           <a href="">L'opera dei Pupi,</a> siciliani è una antica forma di teatro, che si affermò tra il 700/800 e rappresentò per il popolo uno dei rari momenti di evasione e divertimento dell’epoca. Il puparo rinnovava spettacolo dopo spettacolo le storie di Orlando, Rinaldo, Angelica e Carlomagno, racconti che duravano anche mesi, nello stile delle moderne soap opera. Le più note scuole di teatro delle marionette sono <a href="L’opera dei pupi di Palermo"></a> e quella Catanese.
+           <a href="html/opera.html">L'opera dei Pupi,</a> siciliani è una antica forma di teatro, che si affermò tra il 700/800 e rappresentò per il popolo uno dei rari momenti di evasione e divertimento dell’epoca. Il puparo rinnovava spettacolo dopo spettacolo le storie di Orlando, Rinaldo, Angelica e Carlomagno, racconti che duravano anche mesi, nello stile delle moderne soap opera. Le più note scuole di teatro delle marionette sono <a href="html/opera.html">L’opera dei pupi di Palermo</a> e quella Catanese.
         </p>
         </div>
     </section>
@@ -126,7 +129,7 @@
         <img src="images/img-10.jpg" alt="Image" class="images">
         <div class="text">
         <p>
-            La Sicilia si trova nel cuore del Mediterraneo , crocevia di civiltà e culture di mondi vicini e lontani,  inevitabile fusione di tradizioni culinarie di diversi popoli che hanno sfruttato le risorse tipiche locali  come cereali, frutta, verdura, prodotti del latte, pesce, pollame, vino abbondanti sul territorio  Italiano e siciliano. <a href="">La dieta Mediterranea</a> è stata riconosciuta fonte di benessere e di longevità, si basa  su alimenti tipici del mezzogiorno d’Italia,  vegetali (frutta, verdura, ortaggi, pane e cereali (soprattutto  integrali), patate, fagioli e altri legumi, noci, semi), freschi, al naturale, di stagione, di origine locale;  frutta fresca,  dolci contenenti zuccheri raffinati o miele; <a href="">olio di oliva</a> come principale fonte di grassi;  latticini (principalmente formaggi e yogurt), pesce e pollame consumato in quantità modesta-moderata ; da zero a quattro uova la settimana; carni rosse in modesta quantità; vino consumato in quantità modesta-moderata, generalmente durante il pasto.
+            La Sicilia si trova nel cuore del Mediterraneo , crocevia di civiltà e culture di mondi vicini e lontani,  inevitabile fusione di tradizioni culinarie di diversi popoli che hanno sfruttato le risorse tipiche locali  come cereali, frutta, verdura, prodotti del latte, pesce, pollame, vino abbondanti sul territorio  Italiano e siciliano. <a href="html/delta.html">La dieta Mediterranea</a> è stata riconosciuta fonte di benessere e di longevità, si basa  su alimenti tipici del mezzogiorno d’Italia,  vegetali (frutta, verdura, ortaggi, pane e cereali (soprattutto  integrali), patate, fagioli e altri legumi, noci, semi), freschi, al naturale, di stagione, di origine locale;  frutta fresca,  dolci contenenti zuccheri raffinati o miele; olio di oliva come principale fonte di grassi;  latticini (principalmente formaggi e yogurt), pesce e pollame consumato in quantità modesta-moderata ; da zero a quattro uova la settimana; carni rosse in modesta quantità; vino consumato in quantità modesta-moderata, generalmente durante il pasto.
         </p>
         </div>
     </section>
@@ -147,9 +150,25 @@
 </div>
 
     <div class="three-images">
-        <img src="images/usato.png" alt="">
-        <img src="images/cucina-img.png" alt="">
-        <img src="images/eolie.png" alt="">
+        <div class="three">
+            <a href="https://unesco.it/it/">
+                <img src="images/logo-unesco.webp" alt="Unesco Logo">
+            </a>
+            <a href="https://rapiditaly.it/">
+                <img src="images/rapiditaly.png" alt="Rapid Italy Logo">
+            </a>
+            <a href="https://www.regione.sicilia.it/">
+                <img src="images/three-legs.png" alt="Regione Sicilia Logo">
+            </a>
+        </div>
+        <div class="two">
+            <a href="https://eccoperche.com/">
+                <img src="images/eccoperche.jpg" alt="Eccoperche Logo">
+            </a>
+            <a href="https://www.lasicilia.it">
+                <img src="images/lasicilia.png" alt="Lasicilia Logo">
+            </a>
+        </div>
     </div>
 
     <footer>
