--- a/html/palermo.html
+++ b/html/palermo.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Clubnesco">
+    <title>Clubnesco</title>
+
     <link rel="stylesheet" href="../styles.css">   
      <title>Ramocorre</title>
 
