--- a/html/tempio.html
+++ b/html/tempio.html
@@ -42,9 +42,25 @@
         </div>
 
         <div class="three-images">
-            <img src="../images/usato.png" alt="">
-            <img src="../images/cucina-img.png" alt="">
-            <img src="../images/eolie.png" alt="">
+            <div class="three">
+                <a href="https://unesco.it/it/">
+                    <img src="../images/logo-unesco.webp" alt="Unesco Logo">
+                </a>
+                <a href="https://rapiditaly.it/">
+                    <img src="../images/rapiditaly.png" alt="Rapid Italy Logo">
+                </a>
+                <a href="https://www.regione.sicilia.it/">
+                    <img src="../images/three-legs.png" alt="Regione Sicilia Logo">
+                </a>
+            </div>
+            <div class="two">
+                <a href="https://eccoperche.com/">
+                    <img src="../images/eccoperche.jpg" alt="Eccoperche Logo">
+                </a>
+                <a href="https://www.lasicilia.it">
+                    <img src="../images/lasicilia.png" alt="Lasicilia Logo">
+                </a>
+            </div>
         </div>
     
         <footer>
